# MaintenanceAI

./: .dockerignore  .gitignore  AI_WORKER_PLAN.md  Cargo.toml  Dockerfile  README.md  config.yaml.sample  docker-compose.yml  entrypoint.sh  mock_traffic.py  run_docker.sh
ai_worker/: api.py  api_run.py  llm_providers.py  requirements.txt  run_worker.sh  start_copilot.sh  start_worker.sh  test_llm.py  test_run.sh  worker.py  worker_config.yaml
dashboard/: package-lock.json  package.json  update_maintenance_apps.py
dashboard/src/: App.vue  style.css
dashboard/src/components/: ApplicationCard.vue  CopilotChat.vue
osint_dashboard/: fix_log.py  package-lock.json  package.json  update_app_vue.py  vite.config.ts
osint_dashboard/api/: vision.js
osint_dashboard/public/data/: comprehensive_osint_apis.json  dot_cameras.json  dot_cameras_expanded.json  latest_global_news.json  live_cameras.json  live_crime_data.json  live_infrastructure_data.json  open_news_sources.json
osint_dashboard/src/: App.vue  App.vue.patch  otlpLogger.ts  style.css  update_vue.py
otel_simulator/: ecommerce_simulator.py  enterprise_simulator.py  requirements.txt
src/: main.rs  queue.rs
